# FraNC

./: .gitignore  CONTRIBUTORS.md  DEVELOPMENT.md  Makefile  README.md  example.py  pylint.rc  pyproject.toml
.github/workflows/: black.yml  mypy.yml  pylint.yml  python-publish.yml  testing.yml  testing_no_external.yml  testing_numpy_1.yml
doc/: requirements.txt
doc/editable_files/: data_model.pptx
doc/source/: conf.py  evaluating.rst  filtering.rst  index.rst  introduction.rst
examples/: NNexample.py  filter_developing.py  newtonian_noise_example.py  report_generation.py
examples/evaluation_run/: evaluation_run.py
src/: meson.build
src/franc/: __init__.py
src/franc/common/: common.py
src/franc/evaluation/: __init__.py  dataset.py  evaluation.py  filter_interface.py  metrics.py  newtonian_noise_simulation.py  report_generation.py  signal_generation.py
src/franc/filtering/: __init__.py  bypass.py  common.py  wf.py
src/saftig/: __init__.py
src/saftig/common/: __init__.py  common.py
src/saftig/evaluation/: __init__.py  common.py  dataset.py  evaluation.py  metrics.py
src/saftig/filtering/: __init__.py  common.py  lms.py  lms_c.py  polylms.py  uwf.py  wf.py
testing/: test_dataset.py  test_doctest.py  test_evaluation.py  test_external_spicypy_wf.py  test_filters.py  test_lms.py  test_lms_c.py  test_metrics.py  test_polylms.py  test_uwf.py  test_wf.py
testing/evaluation/: test_dataset.py  test_doctest.py  test_evaluation.py  test_metrics.py  test_newtonian_noise_simulation.py  test_signal_generation.py
testing/filtering/: test_bypass.py  test_external_spicypy_wf.py  test_filters.py  test_lms.py  test_wf.py
tooling/: run_basedpyright.sh  run_linter.sh  run_linter_tests.sh  run_mypy.sh
tooling/profiling/: profile.py
